docs/api/qiskit/0.19/qiskit.pulse.Gaussian.mdx
---
title: Gaussian
description: API reference for qiskit.pulse.Gaussian
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.Gaussian
---

# Gaussian

<Class id="qiskit.pulse.Gaussian" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/pulse_lib/parametric_pulses.py" signature="Gaussian(duration, amp, sigma, name=None)" modifiers="class">
  A truncated pulse envelope shaped according to the Gaussian function whose mean is centered at the center of the pulse (duration / 2):

$$
f(x) = amp * exp( -(1/2) * (x - duration/2)^2 / sigma^2) )  ,  0 <= x < duration
$$

  Initialize the gaussian pulse.

  **Parameters**

  *   **duration** (`int`) – Pulse length in terms of the the sampling period dt.
  *   **amp** (`complex`) – The amplitude of the Gaussian envelope.
  *   **sigma** (`float`) – A measure of how wide or narrow the Gaussian peak is; described mathematically in the class docstring.
  *   **name** (`Optional`\[`str`]) – Display name for this pulse envelope.

  ## Attributes

  <span id="gaussian-amp" />

  ### amp

  <Attribute id="qiskit.pulse.Gaussian.amp" attributeTypeHint="complex">
    The Gaussian amplitude.

    **Return type**

    `complex`
  </Attribute>

  <span id="gaussian-id" />

  ### id

  <Attribute id="qiskit.pulse.Gaussian.id" attributeTypeHint="int">
    Unique identifier for this pulse.

    **Return type**

    `int`
  </Attribute>

  <span id="gaussian-parameters" />

  ### parameters

  <Attribute id="qiskit.pulse.Gaussian.parameters" attributeTypeHint="Dict[str, Any]">
    Return a dictionary containing the pulse’s parameters.

    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>

  <span id="gaussian-sigma" />

  ### sigma

  <Attribute id="qiskit.pulse.Gaussian.sigma" attributeTypeHint="float">
    The Gaussian standard deviation of the pulse width.

    **Return type**

    `float`
  </Attribute>

  ## Methods

  <span id="gaussian-call" />

  ### \_\_call\_\_

  <Function id="qiskit.pulse.Gaussian.__call__" signature="Gaussian.__call__(channel)">
    Call self as a function.
  </Function>

  <span id="gaussian-draw" />

  ### draw

  <Function id="qiskit.pulse.Gaussian.draw" signature="Gaussian.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, interactive=False, scaling=None)">
    Plot the pulse.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples.
    *   **style** (*Optional\[*[*PulseStyle*](qiskit.visualization.pulse.qcstyle#qiskit.visualization.pulse.qcstyle.PulseStyle "qiskit.visualization.pulse.qcstyle.PulseStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **scaling** (`Optional`\[`float`]) – Deprecated, see scale

    **Returns**

    A matplotlib figure object of the pulse envelope

    **Return type**

    matplotlib.figure
  </Function>

  <span id="gaussian-get-sample-pulse" />

  ### get\_sample\_pulse

  <Function id="qiskit.pulse.Gaussian.get_sample_pulse" signature="Gaussian.get_sample_pulse()">
    Return a SamplePulse with samples filled according to the formula that the pulse represents and the parameter values it contains.

    **Return type**

    [`SamplePulse`](qiskit.pulse.pulse_lib.SamplePulse "qiskit.pulse.pulse_lib.sample_pulse.SamplePulse")
  </Function>

  <span id="gaussian-validate-parameters" />

  ### validate\_parameters

  <Function id="qiskit.pulse.Gaussian.validate_parameters" signature="Gaussian.validate_parameters()">
    Validate parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameters passed are not valid.

    **Return type**

    `None`
  </Function>
</Class>

